# rust-programming

./: .gitignore  README.md
attribute-macro/: Cargo.toml
attribute-macro/src/: lib.rs  main.rs
closures/: Cargo.toml
closures/src/: main.rs
collections/hashmap/: Cargo.toml
collections/hashmap/src/: main.rs
collections/string/: Cargo.toml
collections/string/src/: main.rs
collections/vector/: Cargo.toml
collections/vector/src/: main.rs
common-programming-concepts/: Cargo.toml
common-programming-concepts/control-flow/: Cargo.toml
common-programming-concepts/control-flow/src/: main.rs
common-programming-concepts/datatype/: Cargo.toml
common-programming-concepts/datatype/src/: main.rs
common-programming-concepts/function/: Cargo.toml
common-programming-concepts/function/src/: main.rs
common-programming-concepts/src/: main.rs
common-programming-concepts/variable/: Cargo.toml
common-programming-concepts/variable/src/: main.rs
database-interactions/actix-mysql/: Cargo.toml
database-interactions/actix-mysql/src/: main.rs
database-interactions/actix-mysql/src/todo/: model.rs  routes.rs
database-interactions/actix_sqlx_mysql/: Cargo.toml
database-interactions/actix_sqlx_mysql/src/: main.rs
database-interactions/mysql/: Cargo.toml
database-interactions/mysql/src/: main.rs
database-interactions/mysql_async/: Cargo.toml
database-interactions/mysql_async/src/: main.rs
database-interactions/mysql_diesel/: Cargo.toml
database-interactions/mysql_diesel/src/: main.rs
database-interactions/sqlx-mysql/: .env  Cargo.toml
database-interactions/sqlx-mysql/src/: main.rs
enums/define/: Cargo.toml
enums/define/src/: main.rs
enums/if-let-control/: Cargo.toml
enums/if-let-control/src/: main.rs
enums/match-control/: Cargo.toml
enums/match-control/src/: main.rs
error-handling/error-result/: Cargo.toml
error-handling/error-result/src/: main.rs
error-handling/panic/: Cargo.toml
error-handling/panic/src/: main.rs
generic/: Cargo.toml
generic/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello-world/: Cargo.toml
lifecycle/: Cargo.toml
lifecycle/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
references/: Cargo.toml
references/src/: main.rs
rust-course/rust01/: Cargo.toml
rust-course/rust01/src/: main.rs
rust-course/rust01/src/mod2/: mod.rs
rust-course/rust02/: README.md
rust-course/rust03/: .env  Cargo.toml
rust-course/rust03/src/: constants.rs  main.rs  query.rs  response.rs
rust-course/rust03/src/sample/: handler.rs  mod.rs  model.rs
rust-course/rust04/: Cargo.toml
rust-course/rust04/src/: main.rs
rust-course/rust05/: Cargo.toml
rust-course/rust05/src/: main.rs
slices/: Cargo.toml
slices/src/: main.rs
smart-pointers/: Cargo.toml
smart-pointers/src/: main.rs
standard-api/: .env  Cargo.toml
standard-api/src/: constants.rs  main.rs  token.rs
standard-api/src/middleware/: auth_middleware.rs  mod.rs
standard-api/src/todo/: model.rs  routes.rs
structure/method-syntax/: Cargo.toml
structure/method-syntax/src/: main.rs
structure/sample/: Cargo.toml
structure/sample/src/: main.rs
structure/struct/: Cargo.toml
structure/struct/src/: main.rs
trait/sample/src/: main.rs
