[package]
name = "attribute-macro"
version = "0.1.0"
authors = ["huiali <huiali@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"

[lib]
proc-macro = true