[package]
name = "standard-api"
version = "0.1.0"
authors = ["李辉 <lihui@nxin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.6"
actix-cors = "0.5.4"
anyhow = "1.0.28"
lazy_static = "1.4.0"
serde = "1.0.117"
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4.8"
futures="0.3.15"
jsonwebtoken = "7.2.0"

[dependencies.sqlx]
version = "0.4"
default-features = false
features = [ "runtime-actix-rustls", "macros", "mysql", "uuid", "chrono", "bigdecimal", "json", "ipnetwork", "tls"]