[package]
name = "actix_sqlx_mysql"
version = "0.1.0"
authors = ["huiali <huiali@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.1"
anyhow = "1.0.28"
serde = "1.0.117"
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4.8"
futures="0.3.15"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [ "runtime-actix-native-tls", "macros", "mysql", "uuid", "chrono", "bigdecimal", "json", "ipnetwork", "tls"]