[package]
name = "huiali"
version = "0.3.0"
authors = ["huiali <lihui@rust.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
actix-service = "2.0.2"
actix-cors = "0.6.4"
actix-http = "3.3.0"
futures = "0.3.21"
anyhow = "1.0.68"
serde = "1"
serde_json = "1"
dotenv = "0.15.0"
log = "0.4"
log4rs = "1"
chrono = { version = "0.4" }
bson = { version = "2", features = ["chrono-0_4"] }
url = "2"
async-recursion = "1.0"
systemstat = "0.2.1"
tracing = "0.1.37"
tower = { version = "0.4.13" }

[dev-dependencies]
actix-rt = "2"

[dependencies.mongodb]
version = "2"
default-features = false
features = ["async-std-runtime"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
